# tech-proposals

./: LICENSE  README.md  TEMPLATE.md
meetings/: 2022-11-10.md  2023-01-12.md  2023-02-09.md  2023-03-09.md  2023-04-13.md  2023-05-11.md  2023-06-15.md  2023-07-14.md  2023-08-11.md  2023-09-15.md  2023-10-20.md
proposals/: 000-comm-grants.md  000-decoupling-haddock-ghc.md  000-error-messages.md  000-ghc-ops.md  0000-cabal-exact-printer.md  0000-fault-tolerant-ghc.md  0000-ghc-module-naming.md  0000-ghc-module-naming.rst  0000-haskell-symposium-changes.md  0000-job-posting-platforms.md  0000-midstream-bindists.md  0000-replacing-cabal-custom-build.md  0000-specify-dump-json.md  001-ghc-x-hackage.md  002-ghc-tick-tock.md  002-text-utf-default.md  003-installer-guidelines.md  003-installer.md  003-perf-book.md  004-ghc-dashboards.md  052-cryptography-leg-1.md  053-cryptography-extension.md  2022-01-31-haskell-optimization-handbook.md  CHARTER.md  PROPOSALS.md  TEMPLATE.md  advisory-db.md  ghc-api-definition-process.md  ghc-api-tooling.md
proposals/0000-specify-dump-json/: schema.json
proposals/003-installer/: installer-guidelines.md
proposals/accepted/: 000-ast-parser-libs.rst  037-advisory-db.md  047-standard-library-reform.md  047-standard-library-reform.rst  049-standard-library-reform---part-2.rst  050-ghc-base-libraries.rst  051-ghc-base-libraries.rst  50-ide-test-integration.md
proposals/advisory-db/: advisory-proposal.cabal  example.md
proposals/advisory-db/app/: Main.hs
proposals/templates/: HFProject.md  (+2 more)
rfc/: 060-replacing-cabal-custom-build.md
(+1 files in other folders)
